tests/snapshots/single__pass__error_type.snap
---
source: tests/single.rs
expression: output
---
//soppo:generated
package main

import "fmt"
import "errors"

func handleError(err error) string {
	return err.Error()
}

func main() {
	err := errors.New("something went wrong")
	msg := handleError(err)
	fmt.Println(msg)
}
